derive/tests/snapshots/referenced_row_methods/Entity/get_all_entities.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `entity` table.
    pub fn get_all_entities<'a>(&'a self) -> impl Iterator<Item = Entity> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().entity().iter()
    }
}
